@@ -17,6 +17,8 @@ To be released as 0.12pre6 or 0.12rc1.
 * bug 1084: Allow option names containing '+' and '*' in the option
   manager.
 * minor bug 1113: Fix a small memory leak if a mailcap file is malformed.
+* minor bug 1114: Decode SGML entities and NCRs only once in link/@title
+  and other attributes.
 
 Bugs that should be removed from NEWS before the 0.12.0 release:
 
